<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoMainActivity2">

    <androidx.cardview.widget.CardView
        android:id="@+id/tituloResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenidoTituloResultado"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="8dp" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correoDatoResultado"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="8dp" />
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrase_aHint"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/continuarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continuarBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloResultado"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
